@@ -322,3 +322,4 @@
   - bugfix: more thorough serial line initialization
 
 - ==DATE== (4.1)
+  - doc: linux.html (private udev-rules, not 50-..., ATTRS)
